--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -46,36 +46,70 @@
     <p>This Privacy Policy describes how our WhatsApp Business API application ("Fruviapp") handles information. The App is designed solely for internal business automation and communication purposes.</p>
 
     <h2>2. Information We Collect</h2>
-    <p>Our application does not collect, store, or process any personal information from users. The App operates as an automated messaging service using the WhatsApp Business API.</p>
-
-    <h2>3. How We Use Information</h2>
-    <p>The App uses the WhatsApp Business API exclusively to:</p>
+    <p>Our application may collect and process the following information:</p>
     <ul>
-        <li>Send automated business notifications</li>
-        <li>Facilitate internal business communications</li>
-        <li>Process workflow automation through n8n integration</li>
+        <li><strong>Contact Information:</strong> Phone numbers for message delivery</li>
+        <li><strong>Lead Status Data:</strong> Customer lead status and engagement levels</li>
+        <li><strong>Message Content:</strong> Messages sent to and received from customers (when AI response features are enabled)</li>
+        <li><strong>Marketing Preferences:</strong> Customer preferences for marketing communications</li>
     </ul>
 
-    <h2>4. Data Storage</h2>
-    <p>No personal data is stored by our application. All communications are processed through WhatsApp's servers according to their privacy policy.</p>
+    <h2>3. How We Use Information</h2>
+    <p>The App uses collected information to:</p>
+    <ul>
+        <li>Send automated business notifications and updates</li>
+        <li>Deliver targeted marketing messages based on lead status</li>
+        <li>Process customer inquiries through AI-powered responses (when enabled)</li>
+        <li>Facilitate workflow automation through n8n integration</li>
+        <li>Analyze customer engagement for business improvement</li>
+    </ul>
+
+    <h2>4. Data Storage and Retention</h2>
+    <p>We may temporarily store:</p>
+    <ul>
+        <li>Phone numbers and lead status information for messaging automation</li>
+        <li>Message history for AI context (when AI features are enabled)</li>
+        <li>Marketing preferences and engagement data</li>
+    </ul>
+    <p>Data is retained only as long as necessary for business purposes and is securely deleted when no longer needed.</p>
 
     <h2>5. Third-Party Services</h2>
     <p>This application integrates with:</p>
     <ul>
         <li><strong>WhatsApp Business API:</strong> Governed by Meta's privacy policy</li>
         <li><strong>n8n:</strong> Used for workflow automation</li>
+        <li><strong>AI/LLM Services:</strong> May be used for automated response generation (when enabled)</li>
     </ul>
 
-    <h2>6. Data Security</h2>
-    <p>Since we do not collect or store personal data, there are no data security concerns related to our application specifically. All message security is handled by WhatsApp's infrastructure.</p>
+    <h2>6. Marketing Communications</h2>
+    <p>We may send marketing messages based on your lead status and preferences. You can opt out of marketing communications at any time by:</p>
+    <ul>
+        <li>Replying "STOP" to any marketing message</li>
+        <li>Contacting us directly using the information below</li>
+    </ul>
 
-    <h2>7. Your Rights</h2>
-    <p>As we do not collect personal information, there is no personal data to access, modify, or delete. For questions about messages sent through WhatsApp, please refer to WhatsApp's privacy policy.</p>
+    <h2>7. Data Security</h2>
+    <p>We implement appropriate security measures to protect your information, including:</p>
+    <ul>
+        <li>Secure data transmission protocols</li>
+        <li>Access controls and authentication</li>
+        <li>Regular security assessments</li>
+    </ul>
 
-    <h2>8. Changes to This Policy</h2>
+    <h2>8. Your Rights</h2>
+    <p>You have the right to:</p>
+    <ul>
+        <li>Access your personal information we hold</li>
+        <li>Request correction of inaccurate data</li>
+        <li>Request deletion of your data</li>
+        <li>Opt out of marketing communications</li>
+        <li>Object to processing of your data</li>
+    </ul>
+
+    <h2>9. Changes to This Policy</h2>
     <p>We may update this Privacy Policy from time to time. Any changes will be posted on this page with an updated "Last updated" date.</p>
 
-    <h2>9. Contact Information</h2>
+    <h2>10. Contact Information</h2>
     <div class="contact-info">
         <p><strong>If you have any questions about this Privacy Policy, please contact us:</strong></p>
         <p>Email: fruvia@nivefs.com</p>
