--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -55,51 +55,75 @@
     <p>The Service provides:</p>
     <ul>
         <li>Automated WhatsApp message sending capabilities</li>
+        <li>Marketing message delivery based on lead status</li>
+        <li>AI-powered customer response automation (when enabled)</li>
         <li>Integration with n8n workflow automation</li>
-        <li>Business communication automation</li>
+        <li>Customer engagement tracking and analytics</li>
     </ul>
 
     <h2>3. Acceptable Use</h2>
     <p>By using this Service, you agree to:</p>
     <ul>
-        <li>Use the Service only for legitimate business communications</li>
+        <li>Use the Service only for legitimate business communications and marketing</li>
         <li>Comply with WhatsApp's Terms of Service and Business Policy</li>
-        <li>Not send spam or unsolicited messages</li>
-        <li>Respect recipient privacy and opt-out requests</li>
-        <li>Follow all applicable laws and regulations</li>
+        <li>Obtain proper consent before sending marketing messages</li>
+        <li>Respect recipient privacy and honor opt-out requests immediately</li>
+        <li>Use only pre-approved message templates for marketing communications</li>
+        <li>Follow all applicable laws and regulations (including CAN-SPAM, GDPR, etc.)</li>
+        <li>Not send spam or excessive unsolicited messages</li>
     </ul>
 
     <div class="important">
-        <strong>Important:</strong> Users are responsible for ensuring compliance with WhatsApp's messaging policies and local regulations regarding automated communications.
+        <strong>Important:</strong> Users are responsible for ensuring compliance with WhatsApp's messaging policies, obtaining proper marketing consent, and following local regulations regarding automated communications and marketing messages.
     </div>
 
-    <h2>4. Service Availability</h2>
+    <h2>4. Marketing Communications</h2>
+    <p>When using marketing features:</p>
+    <ul>
+        <li>You must have explicit consent to send marketing messages</li>
+        <li>Recipients must be able to opt out at any time</li>
+        <li>You must honor opt-out requests immediately</li>
+        <li>Marketing messages must comply with applicable laws (CAN-SPAM, GDPR, etc.)</li>
+        <li>Only pre-approved WhatsApp message templates may be used</li>
+    </ul>
+
+    <h2>5. AI-Powered Features</h2>
+    <p>When AI response features are enabled:</p>
+    <ul>
+        <li>AI responses are generated based on conversation context</li>
+        <li>You remain responsible for all AI-generated content</li>
+        <li>AI responses must comply with WhatsApp's content policies</li>
+        <li>Human oversight is recommended for sensitive communications</li>
+    </ul>
+
+    <h2>6. Service Availability</h2>
     <p>The Service is provided "as is" without guarantees of uptime or availability. We may modify or discontinue the Service at any time without notice.</p>
 
-    <h2>5. Limitations of Liability</h2>
+    <h2>7. Limitations of Liability</h2>
     <p>To the fullest extent permitted by law, we shall not be liable for any direct, indirect, incidental, special, or consequential damages resulting from the use or inability to use this Service.</p>
 
-    <h2>6. Third-Party Services</h2>
+    <h2>8. Third-Party Services</h2>
     <p>This Service integrates with third-party platforms:</p>
     <ul>
         <li><strong>WhatsApp Business API:</strong> Subject to Meta's terms of service</li>
         <li><strong>n8n:</strong> Subject to n8n's terms of use</li>
+        <li><strong>AI/LLM Services:</strong> Subject to respective AI service providers' terms</li>
     </ul>
     <p>Users are responsible for complying with all applicable third-party terms.</p>
 
-    <h2>7. Intellectual Property</h2>
+    <h2>9. Intellectual Property</h2>
     <p>The Service and its original content are and will remain the exclusive property of the service provider. WhatsApp and n8n are trademarks of their respective owners.</p>
 
-    <h2>8. Termination</h2>
+    <h2>10. Termination</h2>
     <p>We may terminate or suspend access to the Service immediately, without prior notice, for any reason, including violation of these Terms.</p>
 
-    <h2>9. Changes to Terms</h2>
+    <h2>11. Changes to Terms</h2>
     <p>We reserve the right to modify these Terms at any time. Changes will be posted on this page with an updated "Last updated" date.</p>
 
-    <h2>10. Governing Law</h2>
+    <h2>12. Governing Law</h2>
     <p>These Terms shall be governed by and construed in accordance with applicable local laws.</p>
 
-    <h2>11. Contact Information</h2>
+    <h2>13. Contact Information</h2>
     <div class="contact-info">
         <p><strong>For questions about these Terms of Service, please contact us:</strong></p>
         <p>Email: fruvia@nivefs.com</p>
